# agent-f-v2

./: .env.example  .gitignore  README.md  tes.py
agentf_backend/: main.py  pyproject.toml
agentf_backend/app/agents/: code_engine.py  financial_auditor.py  metadata_explorer.py  state.py
agentf_backend/app/api/v1/: router.py
agentf_backend/app/api/v1/endpoints/: auth.py  pipeline.py  workspace.py
agentf_backend/app/core/: config.py  gc.py  llm.py  redis_client.py  sandbox.py  security.py
agentf_backend/app/services/: metadata_extractor.py  news_service.py  supabase_client.py
agentf_backend/tests/: test_agents.py  test_endpoints.py  test_pipeline.py
agentf_frontend/: components.json  next.config.ts  package-lock.json  package.json
agentf_frontend/app/: page.tsx
agentf_frontend/app/learn-more/: page.tsx
agentf_frontend/app/login/: page.tsx
agentf_frontend/app/onboarding/: page.tsx
agentf_frontend/app/pricing/: page.tsx
agentf_frontend/app/workspace/: Sidebar.tsx  layout.tsx  page.tsx
agentf_frontend/components/workspace/: AnalyticsDashboard.tsx  FileUploadZone.tsx  PipelineTracker.tsx  WorkspaceTerminal.tsx
agentf_frontend/lib/: api-client.ts
